Change language level to 1.8